fix bango autocorrect alignment

--- a/media/css/devreg/payments.less
+++ b/media/css/devreg/payments.less
@@ -237,6 +237,12 @@
     max-width: 650px;
     min-width: 650px;
 
+    .transform(none);
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+
     #bango-account-errors {
         > div {
             margin: 0.25em 0;
@@ -304,6 +310,10 @@
         display: inline;
         margin-right: 10px;
     }
+}
+
+#id_upsell_of {
+    max-width: 400px;
 }
 
 #submit-payment-type {
